--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -308,7 +308,7 @@ a:hover {
   }
 
   h1 {
-    font-size: 2.8rem;
+    font-size: 2.6rem;
   }
 
   h1, h2, h3 {
